--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -6,7 +6,20 @@
 	<link rel="stylesheet" href="./static/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
-	
+	<nav class="navbar navbar-inverse" role="navigation">
+    <div class="container-fluid">
+    <div class="navbar-header">
+        <a class="navbar-brand" href="#">Exec</a>
+    </div>
+    <div>
+        <ul class="nav navbar-nav">
+            <li class="active"><a href="#">User</a></li>
+            <li><a href="#">Store</a></li>
+            <li><a href="#">Review</a></li>
+        </ul>
+    </div>
+    </div>
+	</nav>
 	<script src="./static/jquery.min.js"></script>
 	<script src="./static/bootstrap/js/bootstrap.min.js"></script>
 </body>
