--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -4,23 +4,87 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="./static/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="./static/style.css">
 </head>
 <body>
 	<nav class="navbar navbar-inverse" role="navigation">
-    <div class="container-fluid">
-    <div class="navbar-header">
-        <a class="navbar-brand" href="#">Exec</a>
-    </div>
-    <div>
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="#">User</a></li>
-            <li><a href="#">Store</a></li>
-            <li><a href="#">Review</a></li>
-        </ul>
-    </div>
-    </div>
+    	<div class="container-fluid">
+    	<div class="navbar-header">
+    	    <a class="navbar-brand" href="#">Exec</a>
+    	</div>
+    	<div>
+    	    <ul class="nav navbar-nav">
+    	        <li class="active"><a href="#">User</a></li>
+    	        <li><a href="#">Store</a></li>
+    	        <li><a href="#">Review</a></li>
+    	    </ul>
+    	</div>
+    	</div>
 	</nav>
-	<script src="./static/jquery.min.js"></script>
+	<div class="content" id="app">
+		<h3>Users</h3>
+		<hr>
+		<table class="table">
+			<thead>
+				<tr>
+					<th>id</th>
+					<th>username</th>
+					<th>fullname</th>
+					<th>lastname</th>
+					<th>sex</th>
+					<th>age</th>
+					<th>operation</th>
+				</tr>
+			</thead>
+			<tbody id="data">
+			</tbody>
+		</table>
+		<h3>Create User</h3>
+		<hr>
+		<form class="form-horizontal" role="form">
+			<input type="hidden" value="" id="id">
+  			<div class="form-group">
+    			<label for="firstname" class="col-sm-1 control-label">firstname</label>
+    			<div class="col-sm-2">
+      				<input type="text" class="form-control" id="firstname" placeholder="firstname">
+    			</div>
+  			</div>
+  			<div class="form-group">
+  			  	<label for="lastname" class="col-sm-1 control-label">lastname</label>
+  			  	<div class="col-sm-2">
+  			    	<input type="text" class="form-control" id="lastname" placeholder="lastname">
+  			  	</div>
+  			</div>
+  			<div class="form-group">
+  			  	<label for="lastname" class="col-sm-1 control-label">sex</label>
+  			  	<div class="col-sm-2">
+  			    	<div class="radio">
+  						<label>
+    					<input type="radio" name="sex" value="m" checked>male
+ 						 </label>
+					</div>
+					<div class="radio">
+					  <label>
+					    <input type="radio" name="sex"  value="f">female
+					  </label>
+				</div>
+  			  	</div>
+  			</div>
+  			<div class="form-group">
+  			  	<label for="age" class="col-sm-1 control-label">age</label>
+  			  	<div class="col-sm-2">
+  			    	<input type="number" class="form-control" id="age" placeholder="age">
+  			  	</div>
+  			</div>
+  			<div class="form-group">
+  			  <div class="col-sm-offset-1 col-sm-2">
+  			    <button type="button" class="btn btn-default" id="save">save</button>
+  			  </div>
+  			</div>
+		</form>
+	</div>
+	<script src="//cdn.bootcss.com/jquery/1.12.2/jquery.min.js"></script>
 	<script src="./static/bootstrap/js/bootstrap.min.js"></script>
+	<script src="./static/user.js"></script>
 </body>
 </html>
