--- a/backend/public/store.html
+++ b/backend/public/store.html
@@ -22,60 +22,43 @@
     	</div>
 	</nav>
 	<div class="content" id="app">
-		<h3>Users</h3>
+		<h3>Stores</h3>
 		<hr>
 		<table class="table">
 			<thead>
 				<tr>
 					<th>id</th>
-					<th>username</th>
-					<th>fullname</th>
-					<th>lastname</th>
-					<th>sex</th>
-					<th>age</th>
+					<th>storename</th>
+					<th>category</th>
+					<th>address</th>
 					<th>operation</th>
 				</tr>
 			</thead>
 			<tbody id="data">
 			</tbody>
 		</table>
-		<h3>Create User</h3>
+		<h3>Add Store</h3>
 		<hr>
 		<form class="form-horizontal" role="form">
 			<input type="hidden" value="" id="id">
   			<div class="form-group">
-    			<label for="firstname" class="col-sm-1 control-label">firstname</label>
+    			<label for="storename" class="col-sm-1 control-label">storename</label>
     			<div class="col-sm-2">
-      				<input type="text" class="form-control" id="firstname" placeholder="firstname">
+      				<input type="text" class="form-control" id="storename" placeholder="storename">
     			</div>
   			</div>
   			<div class="form-group">
-  			  	<label for="lastname" class="col-sm-1 control-label">lastname</label>
+  			  	<label for="category" class="col-sm-1 control-label">category</label>
   			  	<div class="col-sm-2">
-  			    	<input type="text" class="form-control" id="lastname" placeholder="lastname">
+  			    	<input type="text" class="form-control" id="category" placeholder="category">
   			  	</div>
   			</div>
   			<div class="form-group">
-  			  	<label for="lastname" class="col-sm-1 control-label">sex</label>
-  			  	<div class="col-sm-2">
-  			    	<div class="radio">
-  						<label>
-    					<input type="radio" name="sex" value="m" checked>male
- 						 </label>
-					</div>
-					<div class="radio">
-					  <label>
-					    <input type="radio" name="sex"  value="f">female
-					  </label>
-				</div>
-  			  	</div>
-  			</div>
-  			<div class="form-group">
-  			  	<label for="age" class="col-sm-1 control-label">age</label>
-  			  	<div class="col-sm-2">
-  			    	<input type="number" class="form-control" id="age" placeholder="age">
-  			  	</div>
-  			</div>
+            <label for="address" class="col-sm-1 control-label">address</label>
+            <div class="col-sm-2">
+              <input type="text" class="form-control" id="address" placeholder="address">
+            </div>
+        </div>
   			<div class="form-group">
   			  <div class="col-sm-offset-1 col-sm-2">
   			    <button type="button" class="btn btn-default" id="save">save</button>
@@ -85,6 +68,6 @@
 	</div>
 	<script src="//cdn.bootcss.com/jquery/1.12.2/jquery.min.js"></script>
 	<script src="./static/bootstrap/js/bootstrap.min.js"></script>
-	<script src="./static/user.js"></script>
+	<script src="./static/store.js"></script>
 </body>
 </html>
