--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -39,7 +39,7 @@
 			<tbody id="data">
 			</tbody>
 		</table>
-		<h3>Create User</h3>
+		<h3 id="title">Add User</h3>
 		<hr>
 		<form class="form-horizontal" role="form">
 			<input type="hidden" value="" id="id">
@@ -60,12 +60,12 @@
   			  	<div class="col-sm-2">
   			    	<div class="radio">
   						<label>
-    					<input type="radio" name="sex" value="m" checked>male
+    					<input type="radio" name="sex" value="M" checked>male
  						 </label>
 					</div>
 					<div class="radio">
 					  <label>
-					    <input type="radio" name="sex"  value="f">female
+					    <input type="radio" name="sex"  value="F">female
 					  </label>
 				</div>
   			  	</div>
