--- a/backend/public/store.html
+++ b/backend/public/store.html
@@ -37,7 +37,7 @@
 			<tbody id="data">
 			</tbody>
 		</table>
-		<h3>Add Store</h3>
+		<h3 id="title">Add Store</h3>
 		<hr>
 		<form class="form-horizontal" role="form">
 			<input type="hidden" value="" id="id">
@@ -66,6 +66,49 @@
   			</div>
 		</form>
 	</div>
+  <div class="modal fade" tabindex="-1" role="dialog" id="modal">
+    <div class="modal-dialog modal-sm" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">Add new Review</h4>
+        </div>
+        <div class="modal-body">
+            <form>
+              <input type="hidden" id="store">
+               <div class="form-group">
+                 <label>Select User</label>
+                 <select name="" id="users" class="form-control"></select>
+               </div>
+               <div class="form-group">
+                 <label>Rate</label>
+                 <select name="" id="rate" class="form-control">
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                 </select>
+               </div>
+               <div class="form-group">
+                 <label>Comment</label>
+                 <textarea name="" id="comment" cols="30" rows="3" class="form-control"></textarea>
+               </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" id="saveReview">Save</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
 	<script src="//cdn.bootcss.com/jquery/1.12.2/jquery.min.js"></script>
 	<script src="./static/bootstrap/js/bootstrap.min.js"></script>
 	<script src="./static/store.js"></script>
