--- a/backend/public/review.html
+++ b/backend/public/review.html
@@ -16,7 +16,6 @@
     	    <ul class="nav navbar-nav">
     	        <li class="active"><a href="index.html">User</a></li>
     	        <li><a href="store.html">Store</a></li>
-    	        <li><a href="#">Review</a></li>
     	    </ul>
     	</div>
     	</div>
@@ -39,6 +38,53 @@
 			</tbody>
 		</table>
     </div>
+    <div class="modal fade" tabindex="-1" role="dialog" id="modal">
+    <div class="modal-dialog modal-sm" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">Add new Review</h4>
+        </div>
+        <div class="modal-body">
+            <form>
+               <input type="hidden" id="review_id">
+               <div class="form-group">
+                 <label>Select User</label>
+                 <select name="" id="users" class="form-control"></select>
+               </div>
+               <div class="form-group">
+                 <label>Select Store</label>
+                 <select name="" id="store" class="form-control"></select>
+               </div>
+               <div class="form-group">
+                 <label>Rate</label>
+                 <select name="" id="rate" class="form-control">
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                 </select>
+               </div>
+               <div class="form-group">
+                 <label>Comment</label>
+                 <textarea name="" id="comment" cols="30" rows="3" class="form-control"></textarea>
+               </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" id="save">Save</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
 	<script src="//cdn.bootcss.com/jquery/1.12.2/jquery.min.js"></script>
 	<script src="./static/bootstrap/js/bootstrap.min.js"></script>
 	<script src="./static/review.js"></script>
