--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="./static/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="./static/style.css">
+  <link rel="stylesheet" href="./static/style.css">
+	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css">
 </head>
 <body>
 	<nav class="navbar navbar-inverse" role="navigation">
@@ -84,6 +85,7 @@
 	</div>
 	<script src="//cdn.bootcss.com/jquery/1.12.2/jquery.min.js"></script>
 	<script src="./static/bootstrap/js/bootstrap.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 	<script src="./static/user.js"></script>
 </body>
 </html>
