--- a/backend/public/store.html
+++ b/backend/public/store.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="./static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css">
 	<link rel="stylesheet" href="./static/style.css">
 </head>
 <body>
@@ -110,6 +111,7 @@
   </div><!-- /.modal -->
 	<script src="//cdn.bootcss.com/jquery/1.12.2/jquery.min.js"></script>
 	<script src="./static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 	<script src="./static/store.js"></script>
 </body>
 </html>
